fixed the overflow to projectContents

--- a/src/styles.css
+++ b/src/styles.css
@@ -102,15 +102,8 @@ button{
   position: absolute;
   width: 100%;
   height: 100%;
-
-  
-  /* transform: translate(-50%, -50%); */
-  /* margin-inline: auto; */
   background-color: #F7C5CC;
-  /* margin: 0; */
-  /* border-radius: 10px;
-  overflow: auto; */
-  
+  overflow: auto;
 }
 
 .projectContentsHeader{
